src/main/java/com/example/please/error/BadRequestException.java
package com.example.please.error;

public class BadRequestException extends RuntimeException{

    public BadRequestException(String message) {
        super(message);
    }


}
